AC_INIT

PACKAGE=u2_anon
VERSION=v0.9.0b

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_CONFIG_SRCDIR([./src])
AC_PREREQ(2.50)

AM_CONFIG_HEADER(config.h)


NO_OPTIMIZE="no"
ADD_WERROR="no"

# Test for -Werror and sed it out for now since some of the auto tests,
# for example AC_CHECK_LIB, will fail because of
# warning: conflicting types for built-in function <func>
if eval "echo $CFLAGS | grep -e -Werror"; then
    CFLAGS=`echo $CFLAGS | sed -e "s/-Werror//g"`
    ADD_WERROR="yes"
fi

# Disable annoying practice of recursively re-running the autotools
AM_MAINTAINER_MODE
AC_PROG_CC_STDC
AC_PROG_CC
#AC_PROG_LIBTOOL
AC_PROG_RANLIB
AC_C_BIGENDIAN
AC_C_INLINE
AC_HEADER_STDBOOL


AC_CHECK_HEADERS([ \
    dirent.h \
    fcntl.h \
    errno.h \
    netinet/in.h \
    netinet/ip6.h \
    signal.h \
    stdlib.h \
    string.h \
    sys/types.h \
    sys/stat.h \
    unistd.h \
])

AC_CHECK_LIB(dnet, ip_checksum,,IP_CKSUM)
AC_CHECK_LIB(dnet, ip6_checksum,,IP6_CKSUM)

if test "$ip_checksum"  = "xno" ; then
   echo ""
   echo "Can't find ip_checksum() in libdnet"
   echo ""    
   exit 1     
fi

if test "$ip6_checksum"  = "xno" ; then
   echo ""
   echo "Can't find ip6_checksum() in libdnet"
   echo ""
   exit 1
fi


AC_CHECK_SIZEOF([char])
AC_CHECK_SIZEOF([short])
AC_CHECK_SIZEOF([int])
AC_CHECK_SIZEOF([long int])
AC_CHECK_SIZEOF([long long int])
AC_CHECK_SIZEOF([unsigned int])
AC_CHECK_SIZEOF([unsigned long int])
AC_CHECK_SIZEOF([unsigned long long int])


AC_PROG_INSTALL
AC_CONFIG_FILES([ \
u2_anon.pc \
Makefile \
src/Makefile])
AC_OUTPUT
