## $Id$
AUTOMAKE_OPTIONS=foreign no-dependencies subdir-objects
CFLAGS = -Wall 

bin_PROGRAMS = u2_anon

u2_anon_SOURCES =\
u2_anon.c u2_anon.h\
decode.c decode.h\
unified2_operation.c unified2_operation.h\
Unified2_common.h\
daq.h\
daq_common.h\
ipv6_port.h\
sf_ip.h\
sf_iph.h\
sf_ipvar.h\
sfbpf_dlt.h\
snort_bounds.h
